<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/llCurved">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHeadLine"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"
                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_orange_light"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/berita_utama_ikon"
                        app:tint="@android:color/holo_orange_light"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/berita_utama"
                        android:textColor="@android:color/holo_orange_light"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_orange_light" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_orange_light" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardSports"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"
                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_red_dark"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/berita_olahraga_ikon"
                        tools:ignore="ContentDescription"
                        app:tint="@android:color/holo_red_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/olahraga"
                        android:textColor="@android:color/holo_red_dark"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_red_dark" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_red_dark" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardTechno"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"
                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_purple"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/berita_teknologi_ikon"
                        tools:ignore="ContentDescription"
                        app:tint="@android:color/holo_purple" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/teknologi"
                        android:textColor="@android:color/holo_purple"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_purple" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_purple" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardBusiness"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"
                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/black"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/berita_bisnis_ikon"
                        tools:ignore="ContentDescription"
                        app:tint="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/bisnis"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/black" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/black" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHealth"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"
                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_green_dark"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/berita_kesehatan_ikon"
                        tools:ignore="ContentDescription"
                        app:tint="@android:color/holo_green_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/kesehatan"
                        android:textColor="@android:color/holo_green_dark"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_green_dark" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_green_dark" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardEnter"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"
                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/berita_artis_ikon"
                        tools:ignore="ContentDescription"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hiburan"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@color/colorPrimary" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@color/colorPrimary" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>